# phillips_hue

./: .gitignore  .hue_config.example.json  LICENSE  README.md  claude_hook.py  hue_green.py  pyproject.toml  test_hooks.py
.claude/: settings.local.json
.github/workflows/: test.yml
hooks/: pre-commit
